--- a/source/OrkEngine3D.Graphics/OrkEngine3D.Graphics.csproj
+++ b/source/OrkEngine3D.Graphics/OrkEngine3D.Graphics.csproj
@@ -14,4 +14,8 @@
     <Folder Include="OpenGL\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="OpenTK" Version="4.6.4" />
+  </ItemGroup>
+
 </Project>
