--- a/source/OrkEngine3D.Editor/OrkEngine3D.Editor.csproj
+++ b/source/OrkEngine3D.Editor/OrkEngine3D.Editor.csproj
@@ -1,10 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Library</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <ApplicationIcon />
-    <StartupObject />
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="resources\" />
+  </ItemGroup>
 
 </Project>
