Fixed namespace in proiect settings

--- a/source/OrkEngine3D.Diagnostics/OrkEngine3D.Diagnostics.csproj
+++ b/source/OrkEngine3D.Diagnostics/OrkEngine3D.Diagnostics.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <ApplicationIcon />
     <StartupObject />
+    <RootNamespace>OrkEngine3D</RootNamespace>
   </PropertyGroup>
 
 </Project>
