--- a/source/OrkEngine3D.Editor/OrkEngine3D.Editor.csproj
+++ b/source/OrkEngine3D.Editor/OrkEngine3D.Editor.csproj
@@ -8,4 +8,8 @@
     <Folder Include="resources\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OrkEngine3D.Core\OrkEngine3D.Core.csproj" />
+  </ItemGroup>
+
 </Project>
