Removed code that stopped compiling process

--- a/source/OrkEngine3D.Graphics/OrkEngine3D.Graphics.csproj
+++ b/source/OrkEngine3D.Graphics/OrkEngine3D.Graphics.csproj
@@ -15,7 +15,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="OpenTK" Version="4.6.4" />
+    <PackageReference Include="OpenTK" Version="5.0.0-pre.6" />
+    <PackageReference Include="SharpDX" Version="4.2.0" />
+    <PackageReference Include="SharpDX.D3DCompiler" Version="4.2.0" />
+    <PackageReference Include="SharpDX.Direct3D11" Version="4.2.0" />
+    <PackageReference Include="SharpDX.DXGI" Version="4.2.0" />
+    <PackageReference Include="SharpDX.Mathematics" Version="4.2.0" />
   </ItemGroup>
 
 </Project>
