--- a/source/OrkEngine3D.Graphics/OrkEngine3D.Graphics.csproj
+++ b/source/OrkEngine3D.Graphics/OrkEngine3D.Graphics.csproj
@@ -7,20 +7,23 @@
     <StartupObject />
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
   <ItemGroup>
     <Folder Include="Direct3D\" />
     <Folder Include="Vulkan\" />
     <Folder Include="SDL\" />
-    <Folder Include="OpenGL\" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="OpenTK" Version="5.0.0-pre.6" />
     <PackageReference Include="SharpDX" Version="4.2.0" />
     <PackageReference Include="SharpDX.D3DCompiler" Version="4.2.0" />
     <PackageReference Include="SharpDX.Direct3D11" Version="4.2.0" />
     <PackageReference Include="SharpDX.DXGI" Version="4.2.0" />
     <PackageReference Include="SharpDX.Mathematics" Version="4.2.0" />
+    <PackageReference Include="Silk.NET.Core" Version="2.12.0" />
   </ItemGroup>
 
 </Project>
